<resources>
    <string name="app_name">Film Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cameras">Cameras</string>
    <string name="menu_rolls">Rolls</string>
    <string name="menu_photos">Photos</string>

    <string name="home_second">Home Second</string>
    <string name="signout">Sign Out</string>

    <string name="nav_drawer_bottom_section">Other</string>
    <string name="camera_thumbnail">Camera Thumbnail</string>
    <string name="aperture_label">f</string>
    <string name="film_state_empty">Empty</string>
    <string name="film_state_loaded">Loaded</string>
</resources>
